Fix to spacing between expanding table row and url to website.

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -436,7 +436,7 @@ a {
 
     /* Domain column, to accommodate for More button. */
     td:first-child {
-      padding-left: 32px !important;
+      padding-left: 40px !important;
     }
 
     thead {
@@ -461,6 +461,10 @@ a {
         top: 9px;
         background-color: lighten($light-blue, 20%);
       }
+    }
+
+    tbody > tr.child span.dtr-title {
+      min-width: 50px;
     }
 
     tbody > tr.parent > th:first-child:before {
